--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/cancellation/template/price-product-edit-cancellation-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/cancellation/template/price-product-edit-cancellation-section.html
@@ -9,7 +9,7 @@
 	</div>
 
 	<div class="form-group">
-		<select class="form-control" [ngModel]="conditions.policyType" (change)="didChangePolicyType($event.target.value)">
+		<select class="form-control" [ngModel]="conditions.policyType" (change)="didChangePolicyType($event.target.value)" [disabled]="readonly">
 			<option *ngFor="#cancellationPolicyMeta of cancellationPolicyMetaList" [value]="cancellationPolicyMeta.policyType">
 				{{cancellationPolicyMeta.policyName | translate}}
 			</option>
@@ -28,6 +28,13 @@
 				>
 			</th-hour-select>
 		</div>
+		<div class="col-xs-12 form-group" *ngIf="isCanCancelDaysBeforePolicy()">
+			<div class="input-group" [ngClass]="{'form-warning': (didSubmit&&!conditions.policy.isValid())}">
+				<label>{{ 'Days before' | translate }}</label>
+				<input type="number" placeholder="{{ 'Number of days' | translate }}" class="form-control input-group-lg" [(ngModel)]="conditions.policy.daysBefore" [readonly]="readonly">
+			</div>
+			<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the number of days' | translate }}</small></label>
+		</div>
 	</div>
 </div>
 
@@ -41,7 +48,7 @@
 		</small>
 	</div>
 	<div class="form-group">
-		<select class="form-control" [ngModel]="conditions.penaltyType">
+		<select class="form-control" [ngModel]="conditions.penaltyType" [disabled]="readonly">
 			<option *ngFor="#cancellationPenaltyMeta of filteredCancellationPenaltyMetaList" [value]="cancellationPenaltyMeta.penaltyType">
 				{{cancellationPenaltyMeta.penaltyName | translate}}
 			</option>
