--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
@@ -1,6 +1,12 @@
 <div class="col-md-12">
-	<h3>{{ 'Constraints' | translate }} </h3>
-	<p class="text-muted small"> <i class="fa fa-info-circle"></i> {{ 'Constraints to apply the price product on bookings' | translate }}</p>
+	<div class="row">
+		<label>{{ 'Constraints' | translate }}</label>
+	</div>
+	<div class="row">
+		<small class="text-muted" *ngIf="!isPricePerNumberOfPersons">
+			<i class="fa fa-info-circle"></i> {{ 'Constraints to apply the price product on bookings' | translate }} 
+		</small>
+	</div>
 
 	<table class="table table-striped projects">
 		<tbody>
@@ -9,7 +15,7 @@
 				<td>{{constraintVM.displayValue}}</td>
 				<td *ngIf="!readonly">
 					<a class="btn btn-xs" (click)="removeConstraint(constraintVM)">
-						<i class="fa fa-remove"></i> {{ 'Remove' | translate }} 
+						<i class="fa fa-remove"></i> {{ 'Remove' | translate }}
 					</a>
 				</td>
 			</tr>
