--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/container/template/price-product-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/container/template/price-product-edit-container.html
@@ -37,20 +37,22 @@
 
 	<div class="row">
 		<div class="col-xs-8">
-			<div class="row" *ngIf="isNewOrDraftPriceProduct()">
+			<div *ngIf="isNewOrDraftPriceProduct()">
 				<div class="row">
-					<div class="col-xs-3">
-						<label class="control-label">{{ 'Save as Draft' | translate }}</label>
-					</div>
-					<div class="col-xs-9">
-						<div class="input-group">
-							<div class="btn-group" data-toggle="buttons">
-								<button class="btn btn-default" (click)="saveAsDraft=true" [ngClass]="{'active': saveAsDraft}">
-									{{ 'Yes' | translate }}
-								</button>
-								<button class="btn btn-default" (click)="saveAsDraft=false" [ngClass]="{'active': !saveAsDraft}">
-									{{ 'No' | translate }}
-								</button>
+					<div class="col-xs-12">
+						<div class="col-xs-4">
+							<label class="control-label">{{ 'Save as Draft' | translate }}</label>
+						</div>
+						<div class="col-xs-8">
+							<div class="input-group">
+								<div class="btn-group" data-toggle="buttons">
+									<button class="btn btn-default" (click)="saveAsDraft=true" [ngClass]="{'active': saveAsDraft}">
+										{{ 'Yes' | translate }}
+									</button>
+									<button class="btn btn-default" (click)="saveAsDraft=false" [ngClass]="{'active': !saveAsDraft}">
+										{{ 'No' | translate }}
+									</button>
+								</div>
 							</div>
 						</div>
 					</div>
