--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/cancellation/template/price-product-edit-cancellation-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/cancellation/template/price-product-edit-cancellation-section.html
@@ -1,11 +1,15 @@
 <div class="col-md-6 col-sm-6 col-sm-6" *ngIf="didInit">
 	<div class="row">
-		<label>{{ 'Cancellation Policy' | translate }}</label>
+		<div class="col-xs-12">
+			<label>{{ 'Cancellation Policy' | translate }}</label>
+		</div>
 	</div>
 	<div class="row">
-		<small class="text-muted">
-			<i class="fa fa-info-circle"></i> {{ 'Conditions for cancelling' | translate }} 
-		</small>
+		<div class="col-xs-12">
+			<small class="text-muted">
+				<i class="fa fa-info-circle"></i> {{ 'Conditions for cancelling' | translate }} 
+			</small>
+		</div>
 	</div>
 
 	<div class="form-group">
@@ -40,12 +44,16 @@
 
 <div class="col-md-6 col-sm-6 col-sm-6" *ngIf="didInit">
 	<div class="row">
-		<label>{{ 'Cancellation Penalty' | translate }}</label>
+		<div class="col-xs-12">
+			<label>{{ 'Cancellation Penalty' | translate }}</label>
+		</div>
 	</div>
 	<div class="row">
-		<small class="text-muted">
-			<i class="fa fa-info-circle"></i> {{ 'Attach penalty on cancellation' | translate }} 
-		</small>
+		<div class="col-xs-12">
+			<small class="text-muted">
+				<i class="fa fa-info-circle"></i> {{ 'Attach penalty on cancellation' | translate }} 
+			</small>
+		</div>
 		<div class="col-xs-12 form-group">
 			<select class="form-control" [ngModel]="conditions.penaltyType" (change)="didChangePenaltyType($event.target.value)" [disabled]="readonly">
 				<option *ngFor="#cancellationPenaltyMeta of filteredCancellationPenaltyMetaList" [value]="cancellationPenaltyMeta.penaltyType">
