small ui fix - pp

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraint-modal/template/price-product-constraint-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraint-modal/template/price-product-constraint-modal.html
@@ -16,9 +16,11 @@
 				</select>
 			</div>
 		</div>
-		<small class="text-muted">
-			<i class="fa fa-info-circle"></i> {{ description | translate }} 
-		</small>
+		<div class="col-md-12 col-sm-12 col-xs-12">
+			<small class="text-muted">
+				<i class="fa fa-info-circle"></i> {{ description | translate }} 
+			</small>
+		</div>
 	</div>
 	<hr/>
 	<div class="row" *ngIf="isDaysFromWeekConstraint()">
