--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -2,6 +2,13 @@
 
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,200,200italic,400italic,700,700italic&subset=latin,latin-ext);
 
+@font-face {
+    font-family: UnitpalIcons;
+    src:url(../fonts/UnitpalIcons.TTF);
+}
+
+.unitpal-font { font-family: UnitpalIcons !important; font-weight:normal; font-size:larger; }
+
 body, html {
 	
 	
